--- a/star-wars.Rmd
+++ b/star-wars.Rmd
@@ -29,7 +29,7 @@ kable(accomp_pilots,
 By far, the most accomplished pilot of all is `r accomp_pilots$name[1]`. He is shown below piloting a starship.
 
 ```{r top-pilot, fig.cap="Most accomplished Star Wars pilot.", out.width = "100%"}
-include_graphics("https://starwarz.com/tbone/wp-content/uploads/2011/08/331.jpg",
+include_graphics("https://i1.wp.com/twinfinite.net/wp-content/uploads/2015/11/harrison-ford-Mill_3222044i.jpg",
                  )
 ```
 
